proj1/tests/error/endnote_inception.tx
sdfsd ffsdf sd fsdfs\endnote{sfds fsdfds fs\endnote{sfsdfdsfds sdfds fsd}}